crates/sdk-tests/tests/ctor/ctor_and_fundable_attrs_wrong_order.stderr
error: `#[fundable(..)]` should be placed above `#[ctor]`
 --> $DIR/ctor_and_fundable_attrs_wrong_order.rs:3:1
  |
3 | #[app]
  | ^^^^^^
  |
  = note: this error originates in the attribute macro `app` (in Nightly builds, run with -Z macro-backtrace for more info)
